kubernetes/4linux/aula07/wordpress-deploy/ingress-wordpress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wordpress
  namespace: projeto
spec:
  rules:
  - host: wordpress.dexter.com.br
    http:
      paths:
      - backend:
          serviceName: wordpress
          servicePort: 80
